# uni-erp

./: .env.prod.example  .gitignore  .mcp.json  CLAUDE.md  FIN_MODEL.md  HISOBOT.docx  LICENSE  PROMPT.md  README.md  bitu-erp-pages-design.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  leaves-api-response.txt  teamhub-design-system.md
backend/: .env.example  Dockerfile  Dockerfile.dev  entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  backends.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_passwordresetcode.py
backend/apps/admin_panel/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/core/: admin.py  export.py  filters.py  hemis.py  middleware.py  models.py  notifications.py  pdf.py  serializers.py  sms.py  urls.py  views.py
backend/apps/crm/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/education/: admin.py  filters.py  models.py  serializers.py  teacher_urls.py  urls.py  views.py
backend/apps/finance/: admin.py  filters.py  models.py  payment_providers.py  payment_views.py  serializers.py  urls.py  views.py
backend/apps/hr/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/infrastructure/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/legacy/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/operations/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/science/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/students/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/system/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/warehouse/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
frontend/: .env  (+11 more)
(+516 files in other folders)
