[project]
name = "uni-erp-backend"
version = "0.1.0"
description = "Uni ERP Backend — BITU university management system"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-filter>=24.3",
    "django-cors-headers>=4.4",
    "django-unfold>=0.40",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "dj-database-url>=2.3",
    "whitenoise>=6.7",
    "Pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "faker>=30.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
